infra/jenkins/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-controller
      
      # --- ADDED THIS SECTION ---
      imagePullSecrets:
      - name: ecr-registry-secret
      # --------------------------

      containers:
        - name: jenkins
          image: 908692150527.dkr.ecr.ap-south-1.amazonaws.com/jenkins-tools:lts-jdk21-dockercli
          imagePullPolicy: Always  # Changed to Always to ensure it pulls the latest push
          
          ports:
            - name: http
              containerPort: 8080
            - name: agent
              containerPort: 50000

          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
            - name: ssh-dir
              mountPath: /var/jenkins_home/.ssh
            - name: docker-sock
              mountPath: /var/run/docker.sock

      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home-pvc
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: Socket
        - name: github-ssh-secret
          secret:
            secretName: github-ssh-key
        - name: ssh-dir
          emptyDir: {}
