infra/jenkins/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: jenkins
  namespace: gitops
subsets:
  - addresses:
      - ip: 52.66.64.223
    ports:
      - port: 8080
