infra/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    app: jenkins
  ports:
    - name: http
      port: 80         # service port that Ingress will target
      targetPort: 8080 # container port where Jenkins listens
      protocol: TCP
    - name: agent
      port: 50000
      targetPort: 50000
      protocol: TCP
  type: ClusterIP
