infra/jenkins/ingress-http.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jenkins-http
  namespace: jenkins
spec:
  ingressClassName: traefik
  rules:
    - host: jenkins.projectbyradhe.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 80
